fix spacing, font weights, and colors

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -159,26 +159,35 @@ body {
 
 .container {
 	padding: var(--space-large);
+	padding-top: var(--space-small);
 	max-width: 1000px;
 }
 
 .content {
 	display: flex;
 	flex-direction: column;
-	gap: var(--space-medium);
-	margin-top: var(--space-small);
+	gap: var(--space-large);
+	margin-top: var(--space-large);
 }
 
 /* Hero */
+.hero {
+	display: flex;
+	flex-direction: column;
+	gap: var(--space-small);
+}
+
 .page__title {
 	font-weight: 900;
 	font-size: var(--font-size-x-large);
+	color: var(--color-black);
 	/* margin-bottom: var(--space-x-large); */
 }
 
 .page__subtitle {
 	font-size: var(--font-size-large);
-	font-weight: 500;
+	font-weight: 700;
+	color: var(--color-black);
 }
 
 .page__text_container {
@@ -235,7 +244,6 @@ body {
 /* --- What I've built */
 .project__title {
 	text-decoration: none;
-	color: var(--color-black);
 }
 
 .project__technologies {
